// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DeviceAdd Button observer Renders the component 1`] = `
<fragment-stub>
  <div><button type="button" disabled="disabled" class="v-btn--active mr-2 v-btn v-btn--disabled v-btn--text theme--light v-size--default" data-test="add-btn"><span class="v-btn__content">
          Add Device
        </span></button></div><span class="v-tooltip v-tooltip--bottom"><!----></span>
  <div role="dialog" class="v-dialog__container">
    <!---->
  </div>
</fragment-stub>
`;

exports[`DeviceAdd Button owner Renders the component 1`] = `
<fragment-stub>
  <div><button type="button" class="v-btn--active mr-2 v-btn v-btn--text theme--light v-size--default primary--text" data-test="add-btn"><span class="v-btn__content">
          Add Device
        </span></button></div><span class="v-tooltip v-tooltip--bottom"><!----></span>
  <div role="dialog" class="v-dialog__container">
    <!---->
  </div>
</fragment-stub>
`;

exports[`DeviceAdd Dialog observer Renders the component 1`] = `
<fragment-stub>
  <div><button type="button" disabled="disabled" class="v-btn--active mr-2 v-btn v-btn--disabled v-btn--text theme--light v-size--small" data-test="add-btn"><span class="v-btn__content">
          Add Device
        </span></button></div><span class="v-tooltip v-tooltip--bottom"><!----></span>
  <div role="dialog" class="v-dialog__container"></div>
</fragment-stub>
`;

exports[`DeviceAdd Dialog owner Renders the component 1`] = `
<fragment-stub>
  <div><button type="button" class="v-btn--active mr-2 v-btn v-btn--text theme--light v-size--small primary--text" data-test="add-btn"><span class="v-btn__content">
          Add Device
        </span></button></div><span class="v-tooltip v-tooltip--bottom"><!----></span>
  <div role="dialog" class="v-dialog__container"></div>
</fragment-stub>
`;
